@@ -2,6 +2,14 @@
 Change history for Coverage.py
 ------------------------------
 
+Next version
+------------
+
+- Source code can now be read from eggs.  Thanks, rozza.  Fixes `issue 25`_
+
+.. _issue 25: http://bitbucket.org/ned/coveragepy/issue/25
+
+
 Version 3.1b1, 27 September 2009
 --------------------------------
 
